--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
-    "node" : "6.3.1"
+    "node": "6.3.1"
   },
   "author": "JD Pelayo Petit <pelayojose@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
   },
